# robot_programming

./: LICENSE  README.md
exercises/rp_01_compilers_and_build_systems/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
exercises/rp_01_compilers_and_build_systems/executables/: CMakeLists.txt  Makefile  cmake_install.cmake  main
exercises/rp_01_compilers_and_build_systems/src/: CMakeLists.txt  Makefile  cmake_install.cmake
exercises/rp_02_cpp_intro/: CMakeLists.txt
exercises/rp_02_cpp_intro/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
exercises/rp_02_cpp_intro/src/btree/: CMakeLists.txt  Makefile  btree.cpp  btree.h  btree_test  btree_test.cpp  cmake_install.cmake
exercises/rp_02_cpp_intro/src/linalg/: CMakeLists.txt  Makefile  cmake_install.cmake  mat_f.cpp  mat_f.h  mat_f_test  mat_f_test.cpp  vec_f.cpp  vec_f.h  vec_f_test  vec_f_test.cpp
exercises/rp_03_ros_basics/: Readme.md  pixi.toml
exercises/rp_03_ros_basics/src/install/: local_setup.sh  setup.sh
exercises/rp_03_ros_basics/src/install/rp_simple_controller/share/ament_index/resource_index/package_run_dependencies/: rp_simple_controller
exercises/rp_03_ros_basics/src/install/rp_simple_controller/share/rp_simple_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
exercises/rp_03_ros_basics/src/install/rp_simple_controller/share/rp_simple_controller/cmake/: rp_simple_controllerConfig.cmake
exercises/rp_03_ros_basics/src/log/: latest_build
exercises/rp_03_ros_basics/src/rp_simple_controller/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
exercises/rp_03_ros_basics/src/rp_simple_controller/src/: .turtle_square.cpp.swp  turtle_square.cpp
exercises/rp_04_dmap/: .gitignore  README.md  pixi.toml
exercises/rp_04_dmap/assets/: diag_single_robot.yaml
exercises/rp_04_dmap/rviz_configs/: diag_single_robot_dmap.rviz
exercises/rp_04_dmap/src/rp_commons/: CMakeLists.txt  package.xml
exercises/rp_04_dmap/src/rp_commons/include/rp_commons/: distance_map.h  distance_map_utils.h  draw_helpers.h  grid.h  grid_map.h  grid_mapping.h  laser_scan.h
exercises/rp_04_dmap/src/rp_commons/src/: distance_map.cpp  draw_helpers.cpp  grid_map.cpp  laser_scan.cpp  test_distance_map_node.cpp
exercises/rp_04_dmap/src/rp_simulator/: CMakeLists.txt  package.xml
exercises/rp_04_dmap/src/rp_simulator/include/rp_simulator/: laser_scanner.h  unicycle.h  world.h  world_item.h
exercises/rp_04_dmap/src/rp_simulator/src/: simulator.cpp  world_item.cpp
in_class/ros2_ws/install/: local_setup.sh  setup.sh
in_class/ros2_ws/install/cpp_pubsub/lib/cpp_pubsub/: talker
in_class/ros2_ws/install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
in_class/ros2_ws/log/: latest_build
in_class/ros2_ws/src/cpp_pubsub/: CMakeLists.txt
in_class/ros2_ws/src/cpp_pubsub/src/: publisher_member_function.cpp
in_class/simple_simulator/: CMakeLists.txt  canvas.cpp  canvas.h  differential_drive_robot.cpp  differential_drive_robot.h  grid.cpp  grid.h  grid_map.cpp  grid_map.h  lidar.cpp  lidar.h  linalg.h  rp_sim.cpp  sim_in_class  sim_in_class.cpp  world.cpp  world.h
notes/inheritance-late_binding/: inheritance  inheritance.cpp  late_binding  late_binding.cpp
notes/simple_simulator/: CMakeLists.txt
notes/simple_simulator/src/: canvas.h  lidar.cpp  lidar.h  robot.cpp  robot.h  simple_geometry.h  simple_simulator_test.cpp  world.cpp  world.h
