<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rp_simulator</name>
  <version>0.0.0</version>
  <description>Common library for RobotProgramming Navigation Suite</description>
  <maintainer email="giacomini@diag.uniroma1.it">rvp-00</maintainer>
  <maintainer email="s.ferrari@diag.uniroma1.it">rvp-01</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
    
  <depend>rp_commons</depend>
  <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

